fix tall preview images overflowing

--- a/popup.css
+++ b/popup.css
@@ -79,4 +79,5 @@ p
 .source-preview img
 {
     max-width: 100px;
+    max-height: 146px;
 }
